samples/_failures_safe/1761454587_4b43fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0723685.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c0723685.c:141:13: error: expected expression at end of input
  141 |             tokenize_identifier(
      |             ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c0723685.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0723685.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0723685.c:141:13: error: expected declaration or statement at end of input
